--- a/app/views/admin/index.html.erb
+++ b/app/views/admin/index.html.erb
@@ -1,4 +1,5 @@
 <!-- BEGIN BODY -->
+<div class="fixed-top">
 	<!-- BEGIN HEADER -->
 	<div class="header navbar navbar-inverse navbar-fixed-top">
 		<!-- BEGIN TOP NAVIGATION BAR -->
@@ -1803,3 +1804,4 @@
 		</div>
 	</div>
 	<!-- END FOOTER -->
+</div>
